Fixed the visibility of dashes for screen readers (#5)

--- a/src/components/PostCard/PostCard.module.css
+++ b/src/components/PostCard/PostCard.module.css
@@ -25,6 +25,10 @@
   color: var(--color-text-grey);
 }
 
+.dash {
+  margin: 0 var(--size-8);
+}
+
 .desc {
   font-size: var(--size-18);
   font-weight: 300;
